--- a/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/funcionarios.html
+++ b/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/funcionarios.html
@@ -17,15 +17,15 @@
 </head>
 <body >
 
-  <!-- HEADER -->
   <header class="bg-dark py-3 shadow">
     <div class="container d-flex justify-content-between align-items-center">
         <h3 class="text-white m-0">Sistema RH</h3>
         <nav>
         <a href="index.html" class="btn btn-light me-2">Início</a>
         <a href="funcionarios.html" class="btn btn-light me-2">Funcionários</a>
-        <a href="GestaoCargos.html" class="btn btn-light me-2">Cargos</a>
+        <a href="cargos.html" class="btn btn-light me-2">Cargos</a>
         <a href="CadastroVínculo.html" class="btn btn-light">Vínculos</a>
+        <a href="relatorio.html" class="btn btn-light">Relatórios</a>
         </nav>
     </div>
   </header>
