--- a/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/index.html
+++ b/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
                 <input type="password" class="form-control" id="senha" required />
               </div>
               <div class="d-grid">
-                <button type="submit" class="btn btn-light">Entrar</button>
+                <a href="funcionarios.html" type="submit" class="btn btn-light" >Entrar</a>
               </div>
             </form>
             <p class="mt-3 text-center">
