--- a/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/relatorio.html
+++ b/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/relatorio.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Relatório de Vínculos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/style.css" />
   <style>
     header {
       position: fixed;
@@ -14,63 +15,82 @@
     }
   </style>
 </head>
-<body class="container mt-5">
-  
-  <header class="bg-dark py-3 shadow">
-    <div class="container d-flex justify-content-between align-items-center">
-        <h3 class="text-white m-0">Sistema RH</h3>
-        <nav>
-        <a href="index.html" class="btn btn-light me-2">Início</a>
-        <a href="funcionarios.html" class="btn btn-light me-2">Funcionários</a>
-        <a href="GestaoCargos.html" class="btn btn-light me-2">Cargos</a>
-        <a href="CadastroVínculo.html" class="btn btn-light">Vínculos</a>
-        </nav>
+<body>
+
+<header class="bg-dark py-3 shadow">
+  <div class="container d-flex justify-content-between align-items-center">
+    <h3 class="text-white m-0">Sistema RH</h3>
+    <nav>
+      <a href="index.html" class="btn btn-light me-2">Início</a>
+      <a href="funcionarios.html" class="btn btn-light me-2">Funcionários</a>
+      <a href="cargos.html" class="btn btn-light me-2">Cargos</a>
+      <a href="CadastroVínculo.html" class="btn btn-light me-2">Vínculos</a>
+      <a href="relatorio.html" class="btn btn-light">Relatórios</a>
+    </nav>
+  </div>
+</header>
+
+<div class="container" style="margin-top: 100px;">
+  <div class="row justify-content-center">
+    <div class="col-md-10">
+
+      <div class="card shadow p-4 mb-5">
+        <h4 class="text-center mb-4 text-white">Relatório de Vínculos</h4>
+        
+        <form id="filtroForm" class="row g-3 mb-4">
+          <div class="col-md-6">
+            <label for="filtroFuncionario" class="form-label">Filtrar por Funcionário</label>
+            <select id="filtroFuncionario" class="form-select">
+              <option value="">-- Todos --</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label for="filtroCargo" class="form-label">Filtrar por Cargo</label>
+            <select id="filtroCargo" class="form-select">
+              <option value="">-- Todos --</option>
+            </select>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary w-100">Buscar</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="card shadow p-4">
+        <h5 class="text-center text-white mb-4">Vínculos Cadastrados</h5>
+        <table class="table table-striped table-bordered table-hover bg-white">
+          <thead>
+            <tr>
+              <th>Funcionário</th>
+              <th>Cargo</th>
+              <th>Data Início</th>
+              <th>Data Fim</th>
+              <th>Detalhes</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody id="tabelaVinculos">
+            <!-- Linhas dinâmicas -->
+          </tbody>
+        </table>
+      </div>
     </div>
-  </header>
-    
-  <h2>Relatório de Vínculos</h2>
+  </div>
+</div>
 
-  <form id="filtroForm" class="row g-3 mb-4">
-    <div class="col-md-6">
-      <label for="filtroFuncionario" class="form-label">Filtrar por Funcionário</label>
-      <select id="filtroFuncionario" class="form-select">
-        <option value="">-- Todos --</option>
-      </select>
-    </div>
+<script>
+  const baseUrl = "http://localhost:8080";
 
-    <div class="col-md-6">
-      <label for="filtroCargo" class="form-label">Filtrar por Cargo</label>
-      <select id="filtroCargo" class="form-select">
-        <option value="">-- Todos --</option>
-      </select>
-    </div>
+  const filtroFuncionario = document.getElementById('filtroFuncionario');
+  const filtroCargo = document.getElementById('filtroCargo');
+  const tabelaVinculos = document.getElementById('tabelaVinculos');
 
-    <div class="col-12">
-      <button type="submit" class="btn btn-primary">Buscar</button>
-    </div>
-  </form>
-
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Funcionário</th>
-        <th>Cargo</th>
-        <th>Data Início</th>
-        <th>Data Fim</th>
-        <th>Detalhes</th>
-      </tr>
-    </thead>
-    <tbody id="tabelaVinculos">
-    </tbody>
-  </table>
-
-  <script>
-    const baseUrl = "http://localhost:8080";
-
-    async function carregarFiltros() {
+  // Carregar opções dos filtros
+  async function carregarFiltros() {
+    try {
       const [funcionarios, cargos] = await Promise.all([
-        fetch(`${baseUrl}/funcionarios`).then(r => r.json()),
-        fetch(`${baseUrl}/cargos`).then(r => r.json())
+        fetch(`${baseUrl}/funcionarios`).then(res => res.json()),
+        fetch(`${baseUrl}/cargos`).then(res => res.json())
       ]);
 
       funcionarios.forEach(f => {
@@ -80,45 +100,82 @@
       cargos.forEach(c => {
         filtroCargo.innerHTML += `<option value="${c.id}">${c.nome}</option>`;
       });
+    } catch (error) {
+      alert('Erro ao carregar filtros');
+      console.error(error);
     }
+  }
 
-    async function buscarVinculos() {
+  // Buscar vínculos com filtro
+  async function buscarVinculos() {
+    try {
       let url = `${baseUrl}/funcionariosPorCargo`;
-      const funcionarioId = filtroFuncionario.value;
-      const cargoId = filtroCargo.value;
+      const params = new URLSearchParams();
 
-      if (funcionarioId) {
-        url += `?funcionarioId=${funcionarioId}`;
-      } else if (cargoId) {
-        url += `?cargoId=${cargoId}`;
-      }
+      if (filtroFuncionario.value) params.append('funcionarioId', filtroFuncionario.value);
+      if (filtroCargo.value) params.append('cargoId', filtroCargo.value);
 
-      const dados = await fetch(url).then(r => r.json());
-      const tbody = document.getElementById("tabelaVinculos");
-      tbody.innerHTML = "";
+      if ([...params].length > 0) url += `?${params.toString()}`;
+
+      const response = await fetch(url);
+      if (!response.ok) throw new Error('Erro ao buscar vínculos');
+
+      const dados = await response.json();
+      tabelaVinculos.innerHTML = '';
 
       dados.forEach(v => {
-        tbody.innerHTML += `
+        tabelaVinculos.innerHTML += `
           <tr>
             <td>${v.funcionario?.nome || ''}</td>
             <td>${v.cargo?.nome || ''}</td>
             <td>${v.dataInicio}</td>
             <td>${v.dataFim || ''}</td>
             <td>${v.detalhes || ''}</td>
+            <td>
+              <button class="btn btn-sm btn-warning me-1" onclick='editarVinculo(${JSON.stringify(v)})'>Editar</button>
+              <button class="btn btn-sm btn-danger" onclick="deletarVinculo(${v.id})">Excluir</button>
+            </td>
           </tr>
         `;
       });
+    } catch (error) {
+      alert('Erro ao carregar vínculos');
+      console.error(error);
     }
+  }
 
-    document.getElementById("filtroForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      buscarVinculos();
-    });
+  // Função para editar vínculo (implemente conforme necessidade)
+  function editarVinculo(vinculo) {
+    alert('Funcionalidade de edição não implementada ainda.\nDados do vínculo: ' + JSON.stringify(vinculo));
+    // Aqui você pode redirecionar para uma página de edição ou abrir modal
+  }
 
-    window.onload = async () => {
-      await carregarFiltros();
-      buscarVinculos();
-    };
-  </script>
+  // Deletar vínculo
+  function deletarVinculo(id) {
+    if (confirm("Deseja realmente excluir este vínculo?")) {
+      fetch(`${baseUrl}/funcionariosPorCargo/${id}`, { method: 'DELETE' })
+        .then(res => {
+          if (!res.ok) throw new Error('Erro ao excluir vínculo');
+          alert('Vínculo excluído com sucesso!');
+          buscarVinculos();
+        })
+        .catch(err => {
+          alert('Erro ao excluir vínculo');
+          console.error(err);
+        });
+    }
+  }
+
+  document.getElementById('filtroForm').addEventListener('submit', e => {
+    e.preventDefault();
+    buscarVinculos();
+  });
+
+  window.onload = async () => {
+    await carregarFiltros();
+    buscarVinculos();
+  };
+</script>
+
 </body>
 </html>
